# prototypes

hellocmake/: CMakeLists.txt  README.md  conanfile.txt
hellocmake/cmake/: HelloCMakeConfig.cmake.in  Version.rc.in  setup_coverage.cmake  setup_version.cmake
hellocmake/docs/: llvm
hellocmake/src/: CMakeLists.txt  hello.cpp  hello.hpp  internal.h
hellocmake/tests/integration/: CMakeLists.txt  IntegrationTest.cpp
hellocmake/tests/unit/: CMakeLists.txt  UnitTest.cpp
